src/app/todo-item/todo-item.component.css
.container {
  position: relative;

  display: flex;
  align-items: center;
  height: 48px;
}

.fade-in {
  animation: fade-in 0.5s ease forwards;
}

.text-and-edit {
  flex-grow: 1;

  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.btn {
  background: none;
  border: none;
  padding: 0;
  color: rgb(var(--white));
  margin-right: 10px;
}

.clickable:hover {
  cursor: pointer;
  color: rgba(var(--white), 0.5);
}

.edit-icon {
  transform: scale(0.7);
}

.hidden {
  display: none;
}

@keyframes fade-in {
  0% {
    opacity: 0;
    transform: translateX(50px);
  }

  100% {
    opacity: 100%;
    transform: translateX(0);
  }
}

@keyframes show {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 100%;
  }
}

.checked {
  animation: complete 0.5s ease forwards;
}

@keyframes complete {
  0% {
    opacity: 100%;
    transform: translateX(0);
  }

  100% {
    opacity: 0;
  }
}

.strikethrough {
  background: rgb(var(--white));
  height: 2px;
  width: 1%;

  position: absolute;
  top: 50%;
  left: 0;
  transform: translateY(-50%);
  animation: strikethrough 0.1s linear forwards;
}

.struckthrough {
  background: rgb(var(--white));
  height: 2px;
  width: 100%;

  position: absolute;
  top: 50%;
  left: 0;
  transform: translateY(-50%);
}

@keyframes strikethrough {
  0% {
    width: 1%;
  }

  100% {
    width: 100%;
  }
}

